fix: tests and some cleanup